changed logging